fix z-index of the nav menu & finish the footer styling

--- a/style.scss
+++ b/style.scss
@@ -114,6 +114,8 @@ header {
  align-items: center;
  width: 100%;
  max-width: 1440px;
+ z-index: 2;
+
  @media (min-width: 600px) {
   padding: 1rem 3rem;
  }
@@ -128,7 +130,6 @@ nav {
  display: none;
  flex-direction: column;
  align-items: center;
- z-index: 1;
 
  li {
   list-style: none;
@@ -175,6 +176,9 @@ nav::after {
  z-index: 1;
  border-top: 1rem solid transparent;
  border-right: 1rem solid white;
+ @media (min-width: 600px) {
+  display: none;
+ }
 }
 .nav-menu {
  &:active {
@@ -201,6 +205,7 @@ nav::after {
  font-weight: 900;
  letter-spacing: 0.5rem;
  text-align: center;
+
  @media (min-width: 600px) {
   font-size: 3rem;
  }
@@ -215,6 +220,7 @@ nav::after {
  }
 }
 .hero-mobile {
+ z-index: -1;
  @media (min-width: 600px) {
   display: none;
  }
@@ -372,3 +378,28 @@ nav::after {
 }
 
 // FOOTER SECTION
+
+footer {
+ background-color: hsl(168, 62%, 63%);
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ padding: 3rem;
+ .nav-logo {
+  fill: hsl(167, 40%, 24%);
+ }
+ ul {
+  list-style-type: none;
+  color: hsl(167, 40%, 24%);
+  display: flex;
+  padding: 0;
+  gap: 3rem;
+  margin-bottom: 3rem;
+ }
+ .social {
+  display: flex;
+  gap: 1.5rem;
+  margin-bottom: 3rem;
+ }
+}
